	common/gtk/common_gtk.h, common/gtk/game-rules.c,
	common/gtk/game-rules.h, common/gtk/game-settings.c,
	common/gtk/guimap.c, common/gtk/map-icons.c, common/gtk/metaserver.c,
	common/gtk/player-icon.c, common/gtk/select-game.c, common/gtk/theme.c,
	common/gtk/theme.h, configure.ac, editor/gtk/editor.c,
	server/gtk/main.c: Only use GTK+3 instead of GTK+2.
	common/gtk/gtkbugs.c, common/gtk/gtkbugs.h, common/gtk/gtkcompat.h:
	Removed, because they are GTK+2-only.

2014-02-21  Roland Clobus <rclobus@rclobus.nl>
	* client/ai/Makefile.am: Treat genetic_core as a 'header'.
	* po/POTFILES.in: Added genetic.c, because it contains texts.

2014-02-09  Roland Clobus <rclobus@rclobus.nl>
	* client/common/main.c: Do not start the main loop when the
	computer player cannot connect to the given port.
	* client/gtk/frontend.h, client/gtk/gui.c, client/gtk/offline.c,
	client/gtk/state.c: Do not quit when the client cannot connect to
	the given port.
	* client/ai/Makefile.am, client/ai/genetic_core.c: Basic integration.

2014-02-08  Roland Clobus <rclobus@rclobus.nl>
	* autogen.sh: Pass along the arguments when the embedded copy of
	gnome-common is used.

2014-01-29  Rodrigo Espiga Gómez <rodrigoespiga@hotmail.com>
	* client/ai/genetic_core.c: Basic functions that will rule how the
	genetic player decides its next action.

2014-01-13  Roland Clobus <rclobus@rclobus.nl>
	* client/callback.h, client/common/player.c, client/gtk/identity.c,
	common/gtk/theme.c, server/admin.c, server/avahi.c, server/player.c,
	server/server.h: Fixed misspellings found by 'make codespell'.
	* Makefile.am: Added new tool, codespell, to fix common misspellings.

2014-01-11  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/chat.c, client/gtk/connect.c, client/gtk/develop.c,
	client/gtk/discard.c, client/gtk/gameover.c, client/gtk/gold.c,
	client/gtk/gui.c, client/gtk/legend.c, client/gtk/monopoly.c,
	client/gtk/name.c, client/gtk/player.c, client/gtk/plenty.c,