@@ -95,31 +95,37 @@ FunctionEnd
 Section "!Minimal install" SEC01
   SetOutPath "$INSTDIR"
   SetOverwrite ifnewer
+ 
   File "..\..\..\..\local\pioneers.exe"
-  File "..\..\..\..\local\freetype6.dll"
-  File "..\..\..\..\local\intl.dll"
   File "..\..\..\..\local\libatk-1.0-0.dll"
   File "..\..\..\..\local\libcairo-2.dll"
+  File "..\..\..\..\local\libcairo-gobject-2.dll"
   File "..\..\..\..\local\libcroco-0.6-3.dll"
-  File "..\..\..\..\local\libexpat-1.dll"
+  File "..\..\..\..\local\libffi-6.dll"
   File "..\..\..\..\local\libfontconfig-1.dll"
+  File "..\..\..\..\local\libfreetype-6.dll"
+  File "..\..\..\..\local\libgcc_s_dw2-1.dll"
+  File "..\..\..\..\local\libgdk-3-0.dll"
   File "..\..\..\..\local\libgdk_pixbuf-2.0-0.dll"
-  File "..\..\..\..\local\libgdk-win32-2.0-0.dll"
   File "..\..\..\..\local\libgio-2.0-0.dll"
   File "..\..\..\..\local\libglib-2.0-0.dll"
   File "..\..\..\..\local\libgmodule-2.0-0.dll"
   File "..\..\..\..\local\libgobject-2.0-0.dll"
-  File "..\..\..\..\local\libgthread-2.0-0.dll"
-  File "..\..\..\..\local\libgtk-win32-2.0-0.dll"
+  File "..\..\..\..\local\libgtk-3-0.dll"
+  File "..\..\..\..\local\libiconv-2.dll"
+  File "..\..\..\..\local\libintl-8.dll"
+  File "..\..\..\..\local\liblzma-5.dll"
   File "..\..\..\..\local\libpango-1.0-0.dll"
   File "..\..\..\..\local\libpangocairo-1.0-0.dll"
   File "..\..\..\..\local\libpangoft2-1.0-0.dll"
   File "..\..\..\..\local\libpangowin32-1.0-0.dll"
   File "..\..\..\..\local\libpixbufloader-svg.dll"
-  File "..\..\..\..\local\libpng14-14.dll"
+  File "..\..\..\..\local\libpixman-1-0.dll"
+  File "..\..\..\..\local\libpng15-15.dll"
   File "..\..\..\..\local\librsvg-2-2.dll"
   File "..\..\..\..\local\libssp-0.dll"
   File "..\..\..\..\local\libxml2-2.dll"
+  File "..\..\..\..\local\pthreadGC2.dll"
   File "..\..\..\..\local\zlib1.dll"
   File "..\..\..\..\local\gspawn-win32-helper.exe"
   File "..\..\..\..\local\gspawn-win32-helper-console.exe"
@@ -383,30 +389,35 @@ Section Uninstall
   Delete "$INSTDIR\pioneers-editor.exe"
   Delete "$INSTDIR\pioneersai.exe"
   Delete "$INSTDIR\pioneers.exe"
-  Delete "$INSTDIR\freetype6.dll"
-  Delete "$INSTDIR\intl.dll"
   Delete "$INSTDIR\libatk-1.0-0.dll"
   Delete "$INSTDIR\libcairo-2.dll"
+  Delete "$INSTDIR\libcairo-gobject-2.dll"
   Delete "$INSTDIR\libcroco-0.6-3.dll"
-  Delete "$INSTDIR\libexpat-1.dll"
+  Delete "$INSTDIR\libffi-6.dll"
   Delete "$INSTDIR\libfontconfig-1.dll"
+  Delete "$INSTDIR\libfreetype-6.dll"
+  Delete "$INSTDIR\libgcc_s_dw2-1.dll"
+  Delete "$INSTDIR\libgdk-3-0.dll"
   Delete "$INSTDIR\libgdk_pixbuf-2.0-0.dll"
-  Delete "$INSTDIR\libgdk-win32-2.0-0.dll"
   Delete "$INSTDIR\libgio-2.0-0.dll"
   Delete "$INSTDIR\libglib-2.0-0.dll"
   Delete "$INSTDIR\libgmodule-2.0-0.dll"
   Delete "$INSTDIR\libgobject-2.0-0.dll"
-  Delete "$INSTDIR\libgthread-2.0-0.dll"
-  Delete "$INSTDIR\libgtk-win32-2.0-0.dll"
+  Delete "$INSTDIR\libgtk-3-0.dll"
+  Delete "$INSTDIR\libiconv-2.dll"
+  Delete "$INSTDIR\libintl-8.dll"
+  Delete "$INSTDIR\liblzma-5.dll"
   Delete "$INSTDIR\libpango-1.0-0.dll"
   Delete "$INSTDIR\libpangocairo-1.0-0.dll"
   Delete "$INSTDIR\libpangoft2-1.0-0.dll"
   Delete "$INSTDIR\libpangowin32-1.0-0.dll"
   Delete "$INSTDIR\libpixbufloader-svg.dll"
-  Delete "$INSTDIR\libpng14-14.dll"
+  Delete "$INSTDIR\libpixman-1-0.dll"
+  Delete "$INSTDIR\libpng15-15.dll"
   Delete "$INSTDIR\librsvg-2-2.dll"
   Delete "$INSTDIR\libssp-0.dll"
   Delete "$INSTDIR\libxml2-2.dll"
+  Delete "$INSTDIR\pthreadGC2.dll"
   Delete "$INSTDIR\zlib1.dll"
   Delete "$INSTDIR\gspawn-win32-helper.exe"
   Delete "$INSTDIR\gspawn-win32-helper-console.exe"
@@ -491,7 +502,7 @@ Section Uninstall
   Delete "$INSTDIR\pixmaps\pioneers\style-human-2.png"
   Delete "$INSTDIR\pixmaps\pioneers\style-human-1.png"
   Delete "$INSTDIR\pixmaps\pioneers\style-human.png"
-  Delete "$INSTDIR\pixmaps\pioneers\style-ai.png"
+  Delete "$INSTDIR\pixmaps\pioneers\style-ai.svg"
   Delete "$INSTDIR\pixmaps\pioneers\brick.png"
   Delete "$INSTDIR\pixmaps\pioneers\grain.png"
   Delete "$INSTDIR\pixmaps\pioneers\ore.png"
